about me changes

--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
                     <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
                 </div>
                 <h3>Student.</h3>
-                <p>Donec quam velit, aliquam at tempor quis, blandit quis nisi. Proin orci enim, dictum vel leo eu, blandit vulputate turpis.</p>
+                <p>Currenly a junior attending John Carroll University, majoring in computer science andn double minoring in mathematics and statistics.</p>
             </div>
             <div class="col-md-4 col-sm-6 item">
                 <div class="icon">
                     <i class="fa fa-code fa-3x" aria-hidden="true"></i>
                 </div>
                 <h3>Web Developer.</h3>
-                <p>Donec quam velit, aliquam at tempor quis, blandit quis nisi. Proin orci enim, dictum vel leo eu, blandit vulputate turpis.</p>
+                <p>Through my academic courses, I found a passion for web development and continue to improve my skills through internships and web design tutorials.</p>
             </div>
             <div class="col-md-4 col-sm-6 item">
                 <div class="icon">
                     <i class="fa fa-globe fa-3x" aria-hidden="true"></i>
                 </div>
                 <h3>Traveler.</h3>
-                <p>Donec quam velit, aliquam at tempor quis, blandit quis nisi. Proin orci enim, dictum vel leo eu, blandit vulputate turpis.</p>
+                <p>From Cozumel to Seattle, from Orlando to Colorado, I love to travel in and outside of the country discovering new places, people, and things.</p>
             </div>
         </div>
     </div>
