added portfolio styles

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 </section>
 
 <section id="portfolio">
-    <div class="container text-center">    
+    <div class="container-fluid text-center">    
       <h3 class="margin-section-title">Portfolio</h3><br>
       
       <div class="row text-center">
