more final changes

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         Thunder::Tech
                     </li>
                     <li><strong>Categories</strong>
-                        Design, Development
+                        Design, SASS Styling
                     </li>
                 </ul>
                 <a href="https://clevelandmetroparks.com/" target="_blank" class="project-link">Open Website</a>
@@ -462,6 +462,7 @@
         </div>  
           
         <div class="anim-container">
+            <h4 class="css-anim-title">CSS to SASS</h4>
             <div class="img-anim">
               <img class="img-responsive img-anim-opaque" src="img/css-before.jpg" />
               <img src="img/css-during.jpg" class="img-responsive"/>
