--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
                 </div>
                 <h3>Student.</h3>
-                <p>Currenly a junior attending John Carroll University, majoring in computer science and double minoring in mathematics and statistics.</p>
+                <p>Currenly a senior attending John Carroll University, majoring in computer science and double minoring in mathematics and statistics.</p>
             </div>
             <div class="col-md-4 col-sm-6 item">
                 <div class="icon">
