human arc changes

--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                     CSS & SCSS
                   </span>
                 </li>
+                <li class="graph-bar" data-skill="90">
+                  <span class="graph-label">
+                    Bootstrap
+                  </span>
+                </li>
                 <li class="graph-bar" data-skill="70">
                   <span class="graph-label">
                     JavaScript
@@ -144,9 +149,19 @@
                     MySQL
                   </span>
                 </li>
+                <li class="graph-bar" data-skill="55">
+                  <span class="graph-label">
+                    AngularJS
+                  </span>
+                </li>
                 <li class="graph-bar" data-skill="50">
                   <span class="graph-label">
                     PHP
+                  </span>
+                </li>
+                <li class="graph-bar" data-skill="50">
+                  <span class="graph-label">
+                    Ruby on Rails
                   </span>
                 </li>
                 <li class="graph-bar" data-skill="40">
@@ -571,19 +586,32 @@
         </div>
         <ul class="timeline">
             <li>
+              <div class="timeline-badge human-color"><i class="fa fa-medkit" aria-hidden="true"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title">Human Arc</h4>
+                  <h5 class="job-position-desc">Position: Web Developer Freelancer</h5>
+                  <p><small class="text-muted">August 2017 - December 2017</small></p>
+                </div>
+                <div class="timeline-body">
+                  <p>For my software engineering senior capstone at John Carroll, our group worked for Human Arc to develop an internal training web application. The following was used in the project: ASP.NET, C#, MVC 5, SQL - Microsoft Management Studios with Entity Framework, AngularJS, Bootstrap, JavaScript, and JQuery. I stylized the web pages using Bootstrap and added JavaScript functionality to add separate training quizzes. Addionally, I created the database using SQL Server Management Tool.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
               <div class="timeline-badge q2-color"><i class="fa fa-money" aria-hidden="true"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">Q2ebanking</h4>
                   <h5 class="job-position-desc">Position: Web Developer Intern</h5>
-                  <p><small class="text-muted">Starting June 2017</small></p>
+                  <p><small class="text-muted">June 2017 - August 2017</small></p>
                 </div>
                 <div class="timeline-body">
-                  <p>During my time at the Austin based company, I will be working closely with the Web Services team on short duration projects for financial institutions. This will include web development tasks (HTML, CSS, JavaScript) as part of multiple in-process projects. I will also be exposed to other business units of the company and their customers.</p>
+                  <p>During my time at the Austin based company, I worked closely with the Web Services team on short duration projects for financial institutions. I used Drupal CMS to install content for Alta Pacific Bank & Founders Federal Credit Union sites.  Additionally, I checked website's accessibility met WCAG level AA standards using Wave and aXe tools for Fleetwood Bank. I was also able to attend discover &amp; kickoff meetings to discuss client's needs and outline of project.</p>
                 </div>
               </div>
             </li>
-            <li class="timeline-inverted">
+            <li>
               <div class="timeline-badge thunder-color"><i class="fa fa-square-o" aria-hidden="true"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -596,7 +624,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li class="timeline-inverted">
               <div class="timeline-badge westfield-color"><i class="fa fa-university" aria-hidden="true"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
